# arabic-morph-MI

./: .gitignore  COLLEAGUE_BRIEF.md  FINAL_EXPERIMENT_PLAN.md  NOTES.md  PAPER_NEXT_GOALS.md  PAPER_RESEARCH_QUESTION.md  READING_LIST.md  README.md  SCALING_EXPERIMENTS.md  experiments.md  pyproject.toml
colab/: colab_vscode_notebook.ipynb
data/: README.md  productivity_dataset_natural_almost100.json
data_generation/: AUDIT_PROTOCOL.md  AUDIT_STATUS.md  BALANCED50_HANDOFF.md  CURRENT_DATA_REVIEW.md  MULTISOURCE_HANDOFF.md  PILOT_HANDOFF.md  README.md  SOURCE_EXPANSION_PLAN.md  V2_ECHOROUK_EXPANSION.md  V3_CONTROLLED_F3LAN_HANDOFF.md  WORKER_PROMPT_RISK_FILTERING.txt
data_generation/scripts/: apply_review_decisions.py  audit_f3lan_candidates.py  audit_server.py  build_balanced50_dataset.py  build_conservative_seed.py  build_controlled_f3lan_supplement.py  build_curated_batch.py  build_family_balanced_dataset.py  build_natural_almost100_dataset.py  combine_accepted_rows.py  common.py  export_productivity_dataset.py  extract_candidates.py  make_views.py  merge_candidate_files.py  prepare_morph_audit.py  print_multisource_commands.py  review_curated_dataset.py  sample_abw_sentences.py  sample_audit_items.py  (+3 more)
rep_analysis/: README.md
results/: README.md  REP01_DOWNLOAD.txt  cross_model_interpretation.md  cross_study_interpretation.md
scripts/: colab_run.sh  plot_effective_dimensions.py  plot_probe_geometry_overlay.py  run_final_experiments.sh  run_probes.py  runpod_save_representations.sh  summarize_results.py  verify_final_experiments.py
(+85 files in other folders)
